# h-series-spring-2024-workshop

./: .gitignore  .pre-commit-config.yaml  Dockerfile  InQuanto_Spring_2024_workshop_extended.ipynb  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: python-app.yml
day1/: Getting_started_with_quantinuum_nexus.ipynb  building_circuits_with_TKET.ipynb  riken_inquanto_hpc.ipynb  riken_inquanto_hpc_nexus.ipynb  tket_simulations.ipynb
day2/: 03_from_circuits_to_microcanonical.py  04_from_circuits_to_microcanonical_timing.py  05_submitting_circuits_for_microcanonical.py  06_retrieve_circuits.py  07_visualise_data.py  HEP_use_case_Spring_2024_workshop.ipynb  InQuanto_Riken_extended.ipynb  InQuanto_Spring_2024_workshop_extended.ipynb  tenpy_lattice_adapter.py
docs/source/: conf.py  index.rst
pytemplate/: __init__.py  main.py  utils.py
pytket-quantinuum/day1/: TKET_circuits.ipynb  TKET_simulations.ipynb  building_circuits_with_TKET.ipynb
pytket-quantinuum/day2/: 01_from_exact_diagonalization_to_microcanonical.py  02_time_for_exact_solution.py  03_from_circuits_to_microcanonical.py  05_submitting_circuits_for_microcanonical.py  06_retrieve_circuits.py  07_visualise_data.py  HEP_use_case_Spring_2024_workshop.ipynb  handle_H1-1E_one_step_circuit.txt  handle_H1-1E_two_step_circuit.txt  handle_H1-1E_two_step_circuit_five_qubits.txt
pytket-quantinuum/day2/data/: XY_theta=0.00.pkl  XY_theta=0.40.pkl  XY_theta=0.60.pkl
tests/: test_main.py  test_utils.py
