[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytemplate"
version = "0.0.1"
description = "A python library"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Author", email = "author@email.com" }]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Repository = "https://github.com/CQCL/pytemplate.git"

# See https://microsoft.github.io/pyright/#/getting-started
[tool.pyright]
include = ["pytemplate","tests"]
ignore = ["**/*.ipynb"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.refurb]
python_version = "3.11"
